<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/animal_img"
        android:layout_width="@dimen/height_img"
        android:layout_height="@dimen/width_img"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/cat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>

    <TextView
        android:id="@+id/animal_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/animal_title"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        app:layout_constraintStart_toEndOf="@+id/animal_img"
        app:layout_constraintTop_toTopOf="@+id/animal_img">

    </TextView>

    <TextView
        android:id="@+id/animal_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/animal_info"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/animal_memo"
        app:layout_constraintEnd_toStartOf="@+id/img_btn_arrow"
        app:layout_constraintStart_toStartOf="@+id/animal_title"
        app:layout_constraintTop_toBottomOf="@+id/animal_title">

    </TextView>

    <ImageButton
        android:id="@+id/img_btn_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@null"
        android:src="@mipmap/ic_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageButton>

    <TextView
        android:id="@+id/animal_memo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/animal_memo"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/animal_img"
        app:layout_constraintStart_toStartOf="@+id/animal_info">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>